--- a/shell/package.json
+++ b/shell/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^5.5.1",
     "postcss": "^8.4.21",
     "postcss-loader": "^4.3.0",
+    "react-error-boundary": "^4.0.4",
     "style-loader": "^3.3.2",
     "typescript": "^4.9.5",
     "webpack": "^5.79.0",
